--- a/team.html
+++ b/team.html
@@ -85,7 +85,6 @@
                           <div class="subtext">Senior Designer</div>
                       </div>
                   </div>
-<!-- replace member -->
                   <div class="col-md-4">
                       <div class="team-member">
                           <div class="member-image">
@@ -109,7 +108,7 @@
                   <div class="col-md-4">
                       <div class="team-member">
                           <div class="member-image">
-                            <a href="https://www.behance.net/BenDempsey"><img ></a>
+                            <a href="https://www.behance.net/BenDempsey"><img src="img/people/ben.jpg"></a>
                           </div>
                           <div class="name">Ben Dempsey</div>
                           <div class="subtext">Brand Designer</div>
@@ -118,7 +117,7 @@
                   <div class="col-md-4">
                       <div class="team-member">
                           <div class="member-image">
-                            <a href=""><img src="img/people/dannyh01.jpg"></a>
+                            <a href="https://www.behance.net/dannyhstudio"><img src="img/people/dannyh01.jpg"></a>
                           </div>
                           <div class="name">Danny Hill</div>
                           <div class="subtext">Designer</div>
@@ -129,7 +128,7 @@
                   <div class="col-md-4">
                       <div class="team-member">
                           <div class="member-image">
-                            <a href="#"><img src="img/people/jakelucifer.jpg"></a>
+                            <a href="https://twitter.com/JakeeLucifer_"><img src="img/people/jakelucifer.jpg"></a>
                           </div>
                           <div class="name">Jake Lucifer</div>
                           <div class="subtext">Typographer</div>
@@ -138,7 +137,7 @@
                   <div class="col-md-4">
                       <div class="team-member">
                           <div class="member-image">
-                            <a href="#"><img src="img/people/tenze.jpg"></a>
+                            <a href="https://www.behance.net/teightnz27c8"><img src="img/people/tenze.jpg"></a>
                           </div>
                           <div class="name">Luuk Wijgerse</div>
                           <div class="subtext">Motion Artist</div>
@@ -157,7 +156,7 @@
                 </div>
 
 
-              </div>
+
             </div>
 
 
@@ -166,7 +165,8 @@
 
 
 
-
+          </div>
+        </div>
 
         <footer>
             <div class="container">
