final commit, cmon rob launch the site

--- a/team.html
+++ b/team.html
@@ -176,7 +176,7 @@
                     <hr>
                     Contact@astroloft.com
                     <hr>
-                    <div class="social-icon"><i class="fa fa-twitter" aria-hidden="true"></i></div>
+                    <a href="https://twitter.com/Astroloft"><div class="social-icon"><i class="fa fa-twitter" aria-hidden="true"></i></div></a>
                     <div class="social-icon"><i class="fa fa-google" aria-hidden="true"></i></div>
                     <div class="social-icon"><i class="fa fa-pinterest-p" aria-hidden="true"></i></div>
                     <div class="social-icon"><i class="fa fa-facebook" aria-hidden="true"></i></div>
