--- a/team.html
+++ b/team.html
@@ -26,9 +26,9 @@
 
 
             <div id="desktop-nav">
-              <a href="#about-part">About</a>
-              <a href="#work-part">Work</a>
-              <a href="#contact-part">Contact</a>
+              <a href="index.html?#about-part">About</a>
+              <a href="index.html?#work-part">Work</a>
+              <a href="index.html?#contact-part">Contact</a>
 
             </div>
             <img class="logo left" src="./img/logo.png">
