--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html class="no-js" lang="">
     <head>
+      <!-- Built by Lewis & Rob @ AstroLoft -->
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Astroloft</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
         <!--<link rel="apple-touch-icon" href="apple-touch-icon.png">-->
         <!-- Place favicon.ico in the root directory -->
 
