--- a/team.html
+++ b/team.html
@@ -172,7 +172,7 @@
             <div class="container">
                 <div class="footer-item left">
                     <div class="footer-logo"><img src="./img/logo.png"></div>
-                    Astroloft, a graphics communication company that strives for execellence
+                    Astroloft, a graphics communication company that strives for excellence
                     <hr>
                     Contact@astroloft.com
                     <hr>
