Bigger logo requested by Cam

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <img class="logo left" src="./img/logo.png">
       <h1 class="text-center"><span id="launch">LAUNCH.</span>
-          <br>IT'S NEVER BEEN SO EASY</br>
+          <br>IT'S NEVER BEEN <span class="header-easy" style="font-style: italic;">SO EASY.</span></br>
           <br><a href="#help-section"><div class="bounce"><span class="glyphicon glyphicon-menu-down" style="color:#fff"></span></div></a></br>
       </h1>
 
@@ -361,7 +361,7 @@
           <div class="container">
               <div class="footer-item left">
                   <div class="footer-logo"><img src="./img/logo.png"></div>
-                  Astroloft, a graphics communication company that strives for execellence
+                  Astroloft, a graphics communication company that strives for excellence
                   <hr>
                   Contact@astroloft.com
                   <hr>
