Updated work titles

--- a/index.html
+++ b/index.html
@@ -240,31 +240,31 @@
                       </ul>
                   </div>
                   <div class="work-images text-center branding">
-                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/logo-1.png" /></div>
-                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/logo-4.png" /></div>
-                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/logo-2.png" /></div>
-                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/logo-3.png" /></div>
-                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/logo-5.png" /></div>
-                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/logo-6.png" /></div>
-                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/logo-7.png" /></div>
-                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/logo-8.png" /></div>
+                    <div class="work-image"><div class="overlay"><h4>JordanMG</h4></div><img src="./img/work/logo-1.png" /></div>
+                    <div class="work-image"><div class="overlay"><h4>Robert Owen House</h4></div><img src="./img/work/logo-4.png" /></div>
+                    <div class="work-image"><div class="overlay"><h4>G-Force LTD</h4></div><img src="./img/work/logo-2.png" /></div>
+                    <div class="work-image"><div class="overlay"><h4>Zennyt</h4></div><img src="./img/work/logo-3.png" /></div>
+                    <div class="work-image"><div class="overlay"><h4>Christian Design</h4></div><img src="./img/work/logo-5.png" /></div>
+                    <div class="work-image"><div class="overlay"><h4>Patron</h4></div><img src="./img/work/Patron.png" /></div>
+                    <div class="work-image"><div class="overlay"><h4>Sergio Leaflang</h4></div><img src="./img/work/logo-7.png" /></div>
+                    <div class="work-image"><div class="overlay"><h4>TNVisuals</h4></div><img src="./img/work/logo-8.png" /></div>
                   </div>
                   <div class="work-images text-center web-design hide">
-                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/razer.jpeg" /></div>
-                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/web1.jpg" /></div>
-                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/web2.jpg" /></div>
-                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/share.gif" /></div>
-                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/justin-gif.gif" /></div>
-                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/bose.jpg" /></div>
-                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/justin-app-2.png" /></div>
-                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/justin-app-1.png" /></div>
+                    <div class="work-image"><div class="overlay"><h4>Razer</h4></div><img src="./img/work/razer.jpeg" /></div>
+                    <div class="work-image"><div class="overlay"><h4>Bartlomé Soccer Academy</h4></div><img src="./img/work/web1.jpg" /></div>
+                    <div class="work-image"><div class="overlay"><h4>Adidas</h4></div><img src="./img/work/web2.jpg" /></div>
+                    <div class="work-image"><div class="overlay"><h4>Social Media</h4></div><img src="./img/work/share.gif" /></div>
+                    <div class="work-image"><div class="overlay"><h4>Night Mode</h4></div><img src="./img/work/justin-gif.gif" /></div>
+                    <div class="work-image"><div class="overlay"><h4>BOSE</h4></div><img src="./img/work/bose.jpg" /></div>
+                    <div class="work-image"><div class="overlay"><h4>FutureNav</h4></div><img src="./img/work/justin-app-2.png" /></div>
+                    <div class="work-image"><div class="overlay"><h4>Timer</h4></div><img src="./img/work/justin-app-1.png" /></div>
                   </div>
                   <div class="work-images text-center app-design hide">
 
-                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/share.gif" /></div>
-                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/justin-gif.gif" /></div>
-                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/justin-app-2.png" /></div>
-                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/justin-app-1.png" /></div>
+                    <div class="work-image"><div class="overlay"><h4>Social Media</h4></div><img src="./img/work/share.gif" /></div>
+                    <div class="work-image"><div class="overlay"><h4>Night Mode</h4></div><img src="./img/work/justin-gif.gif" /></div>
+                    <div class="work-image"><div class="overlay"><h4>FutureNav</h4></div><img src="./img/work/justin-app-2.png" /></div>
+                    <div class="work-image"><div class="overlay"><h4>Timer</h4></div><img src="./img/work/justin-app-1.png" /></div>
                   </div>
           </div>
 
