--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                       <div class="swiper-slide"><img src="img/people/rob.png"/><div class="caption">ROB DEARLING</div><p>Developer</p></div>
                       <div class="swiper-slide"><img src="img/people/notjefffree.jpeg"/><div class="caption">ENOCH APPATHURAI</div><p>Developer</p></div>
                       <div class="swiper-slide"><img src="img/people/oseii.jpg"/><div class="caption">MARTIHN MERTENS</div><p>Designer</p></div>
-                      <div class="swiper-slide"><img src=""/><div class="caption">BEN DEMPSEY</div><p>Brand Designer</p></div>
+                      <div class="swiper-slide"><img src="img/people/ben.jpg"/><div class="caption">BEN DEMPSEY</div><p>Brand Designer</p></div>
                       <div class="swiper-slide"><img src="img/people/dannyh01.jpg"/><div class="caption">DANNY HILL</div><p>Designer</p></div>
                       <div class="swiper-slide"><img src="img/people/jakelucifer.jpg"/><div class="caption">JAKE LUCIFER</div><p>Typographer</p></div>
                       <div class="swiper-slide"><img src="img/people/tenze.jpg"/><div class="caption">LUUK WIJGERSE</div><p>Motion Artist</p></div>
