--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                   <div class="work-images text-center branding">
                     <div class="work-image"><div class="overlay"><h4>JordanMG</h4></div><img src="./img/work/logo-1.png" /></div>
                     <div class="work-image"><div class="overlay"><h4>Robert Owen House</h4></div><img src="./img/work/logo-4.png" /></div>
-                    <div class="work-image"><div class="overlay"><h4>G-Force LTD</h4></div><img src="./img/work/logo-2.png" /></div>
+                    <div class="work-image"><div class="overlay"><h4>Zennyt</h4></div><img src="./img/work/synergy.png" /></div>
                     <div class="work-image"><div class="overlay"><h4>Zennyt</h4></div><img src="./img/work/logo-3.png" /></div>
                     <div class="work-image"><div class="overlay"><h4>Christian Design</h4></div><img src="./img/work/logo-5.png" /></div>
                     <div class="work-image"><div class="overlay"><h4>Patron</h4></div><img src="./img/work/Patron.png" /></div>
