--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                       <div class="swiper-slide"><img src="img/people/yambao.jpg"/><div class="caption">JUSTIN YAMBAO</div><p>Senior Designer</p></div>
                       <div class="swiper-slide"><img src="img/people/rob.png"/><div class="caption">ROB DEARLING</div><p>Developer</p></div>
                       <div class="swiper-slide"><img src="img/people/notjefffree.jpeg"/><div class="caption">ENOCH APPATHURAI</div><p>Developer</p></div>
-                      <div class="swiper-slide"><img src="img/people/oseii.jpg"/><div class="caption">MARTIHN MERTENS</div><p>Designer</p></div>
+                      <div class="swiper-slide"><img src="img/people/oseii.jpg"/><div class="caption">MARTIJN MERTENS</div><p>Designer</p></div>
                       <div class="swiper-slide"><img src="img/people/ben.jpg"/><div class="caption">BEN DEMPSEY</div><p>Brand Designer</p></div>
                       <div class="swiper-slide"><img src="img/people/dannyh01.jpg"/><div class="caption">DANNY HILL</div><p>Designer</p></div>
                       <div class="swiper-slide"><img src="img/people/jakelucifer.jpg"/><div class="caption">JAKE LUCIFER</div><p>Typographer</p></div>
@@ -190,7 +190,7 @@
                 <p>Senior Designer</p>
               </div>
               <div class="member">
-                <img src="img/people/yambao.jpg" />
+                <img src="img/people/rob.png" />
                 <h4>ROB DEARLING</h4>
                 <p>Developer</p>
               </div>
@@ -205,7 +205,7 @@
                 <p>Designer</p>
               </div>
               <div class="member">
-                <img src="img/people/yambao.jpg" />
+                <img src="img/people/ben.jpg" />
                 <h4>BEN DEMPSY</h4>
                 <p>Designer</p>
               </div>
